# ap-anchor-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.py
ap_anchor_server/: models.py  serializers.py  urls.py  views.py  wsgi.py
ap_anchor_server/management/commands/: streamevents.py
ap_anchor_server/migrations/: 0001_initial.py
config/: anchor-platform-config.yml  assets-test.json  stellar.toml
